--- a/android/KuXing/app/src/main/res/layout/frag_eventlist.xml
+++ b/android/KuXing/app/src/main/res/layout/frag_eventlist.xml
@@ -3,23 +3,38 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
+    <ImageView
+        android:layout_width="23dp"
+        android:layout_height="23dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="9dp"
+        android:src="@mipmap/note_list"
+
+        />
     <TextView
         android:id="@+id/textView5"
         android:layout_width="91dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="9dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="6dp"
         android:text="记事列表"
         android:textAlignment="center"
-        android:textColor="#515151"
-        android:textSize="18sp" />
+        android:textColor="#22B573"
+        android:textSize="20dp" />
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:layout_marginTop="40dp"
+        android:background="#22B573" />
+
     <ImageView
         android:id="@+id/eventlist_close"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_alignTop="@+id/textView5"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="2dp"
