--- a/android/KuXing/app/src/main/res/layout/personal_changeinfo.xml
+++ b/android/KuXing/app/src/main/res/layout/personal_changeinfo.xml
@@ -142,6 +142,7 @@
         android:layout_marginTop="190dp"
         >
         <EditText
+            android:id="@+id/newSignature"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginTop="5dp"
