--- a/android/KuXing/app/src/main/res/layout/user_info.xml
+++ b/android/KuXing/app/src/main/res/layout/user_info.xml
@@ -11,7 +11,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
 
-        tools:srcCompat="@tools:sample/avatars" />
+        android:src="@mipmap/test" />
 
         <TextView
             android:id="@+id/userName"
@@ -125,7 +125,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="91dp"
         android:layout_marginTop="-2dp"
-        app:srcCompat="@mipmap/add"/>
+        app:srcCompat="@mipmap/addd"/>
 
 
 </RelativeLayout>
